--- a/styles/page.css
+++ b/styles/page.css
@@ -45,5 +45,14 @@
             margin-bottom: 2.4rem;
         }
     }
+
+    .destino_1,
+    .destino_2 {
+        margin-bottom: 4.8rem;
+    }
+
+    li{
+        color: var(--accent-blue);
+    }
     
 }
